fix: word break in editor

--- a/package/styles/index.css
+++ b/package/styles/index.css
@@ -77,5 +77,5 @@ li > ol > li > ol > li:before {
 }
 
 .node-view-content > div {
-  word-break: break-all;
+  word-break: break-word;
 }
